fix css for question cards to align center

--- a/css/style.css
+++ b/css/style.css
@@ -61,9 +61,15 @@ h2 {
   font-size: x-large;
 }
 
+#question-card-container {
+  display: flex;
+  justify-content: center;
+}
 
 #reset {
   display: flex;
+  justify-content: center;
+  align-items: center;
   margin-top: auto;
   font-family: "Orbitron", sans-serif;
   font-size: large;
@@ -71,10 +77,10 @@ h2 {
   font-style: italic;
 }
 
-
 button {
   display: flex;
-  align-content: flex-end;
+  justify-content: center;
+  align-items: center;
   border-radius: 8px;
   font-family: "Orbitron", sans-serif;
   box-shadow: 2px 4px 0px rgba(255, 0, 255), 0px 9px 30px rgba(0, 0, 0, .7);
